--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2024"
 ff = "0.13.1"
 halo2_proofs = { version = "0.3.1", features = ["dev-graph"] }
 halo2curves = "0.9.0"
+num-bigint = "0.4"
